--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
             <input class="url-input" type="url" value="Enter any url..." id="url-input"></input>
             <button class="url-download" onclick="onButtonDownloadClick()">Download</button>
         </div>
+        <div class="title-container">
+        <h4>Once you click Download wait for a bit and it will start downloading automatically.<h4/>
+        </div>
         <div id="result">
             <div class="content-container">
                 <h1>
